--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,8 @@
             ],
             "styles": [
               "node_modules/aos/dist/aos.css",
+              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
+              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
               "src/custom-theme.scss",
               "src/styles.scss"
             ],
@@ -102,6 +104,8 @@
             ],
             "styles": [
               "node_modules/aos/dist/aos.css",
+              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
+              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
               "src/custom-theme.scss",
               "src/styles.scss"
             ],
